--- a/assets/sass/libs/_basic.scss
+++ b/assets/sass/libs/_basic.scss
@@ -2,6 +2,7 @@
 
 // Set box model to border-box.
 // Based on css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice
+
 html {
 		box-sizing: border-box;
 	}
@@ -164,3 +165,14 @@ pre {
 .align-right {
 	text-align: right;
 }
+
+
+// Breakpoints.
+// 
+// @include breakpoints((
+// 	xlarge:   ( 1141px,  1680px ),
+// 	large:    ( 981px,   1140px ),
+// 	medium:   ( 737px,   980px  ),
+// 	small:    ( 481px,   736px  ),
+// 	xsmall:   ( 321px,   480px  ),
+// 	xxsmall:  ( null,    390px  )));
