--- a/assets/sass/libs/_footer.scss
+++ b/assets/sass/libs/_footer.scss
@@ -34,3 +34,22 @@
 		}
 	}
 }
+
+#footer {
+  @include padding(2em, 1.5em, (0,0,_size(element-margin),0));
+
+  .copyright {
+    margin: (_size(element-margin) * 0.75) 0 0 0;
+
+    li {
+      border: 0;
+      display: block;
+      margin: 1em 0 0 0;
+      padding: 0;
+
+      &:first-child {
+        margin-top: 0;
+      }
+    }
+  }
+}
