--- a/assets/sass/stock.scss
+++ b/assets/sass/stock.scss
@@ -959,56 +959,56 @@ html, body {
 // /* Small */
 //
 // @include breakpoint('<=small') {
-//
-// 	/* Basic */
-//
-// 		body, input, select, textarea {
-// 			font-size: 12pt;
-// 		}
-//
-// 		h1 {
-// 			font-size: 1.75em;
-// 		}
-//
-// 		h2 {
-// 			font-size: 1.5em;
-// 		}
-//
-// 		h3 {
-// 			font-size: 1.1em;
-// 		}
-//
-// 		h4 {
-// 			font-size: 1em;
-// 		}
+
+	/* Basic */
+
+		body, input, select, textarea {
+			font-size: 12pt;
+		}
+
+		h1 {
+			font-size: 1.75em;
+		}
+
+		h2 {
+			font-size: 1.5em;
+		}
+
+		h3 {
+			font-size: 1.1em;
+		}
+
+		h4 {
+			font-size: 1em;
+		}
 //
 // 	/* List */
 //
-// 		ul {
-// 			&.major-icons {
-// 				li {
-// 					padding: 1.5em;
-//
-// 					.icon {
-// 						height: 5em;
-// 						line-height: 5em;
-// 						width: 5em;
-//
-// 						&:before {
-// 							font-size: 42px;
-// 						}
-// 					}
-// 				}
-// 			}
-// 		}
+		ul {
+			&.major-icons {
+				li {
+					padding: 1.5em;
+
+					.icon {
+						height: 5em;
+						line-height: 5em;
+						width: 5em;
+
+						&:before {
+							font-size: 42px;
+						}
+					}
+				}
+			}
+		}
 //
 // 	/* Icon */
 //
-// 		.icon {
-// 			&.major {
-// 				margin: 0 0 (_size(element-margin) * 0.5) 0;
-// 			}
-// 		}
+		.icon {
+			&.major {
+				margin: 0 0 (_size(element-margin) * 0.5) 0;
+			}
+		}
 //
 // 	/* Button */
 //
@@ -1051,12 +1051,12 @@ html, body {
 //
 // 	/* Button */
 //
-// 		input[type="submit"],
-// 		input[type="reset"],
-// 		input[type="button"],
-// 		.button {
-// 			padding: 0;
-// 		}
+		input[type="submit"],
+		input[type="reset"],
+		input[type="button"],
+		.button {
+			padding: 0;
+		}
 //
 // 	/* Main */
 //
@@ -1076,25 +1076,8 @@ html, body {
 //
 // 	/* Footer */
 //
-// 		#footer {
-// 			@include padding(2em, 1.5em, (0,0,_size(element-margin),0));
-//
-// 			.copyright {
-// 				margin: (_size(element-margin) * 0.75) 0 0 0;
-//
-// 				li {
-// 					border: 0;
-// 					display: block;
-// 					margin: 1em 0 0 0;
-// 					padding: 0;
-//
-// 					&:first-child {
-// 						margin-top: 0;
-// 					}
-// 				}
-// 			}
-// 		}
-//
+
+
 // }
 //
 // /* XXSmall */
