--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,79 @@
 @charset "UTF-8";
+@import url("https://fonts.googleapis.com/css?family=Lato");
+html, body, div, span, applet, object,
+iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
+pre, a, abbr, acronym, address, big, cite,
+code, del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var, b,
+u, i, center, dl, dt, dd, ol, ul, li, fieldset,
+form, label, legend, table, caption, tbody,
+tfoot, thead, tr, th, td, article, aside,
+canvas, details, embed, figure, figcaption,
+footer, header, hgroup, menu, nav, output, ruby,
+section, summary, time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+body {
+  line-height: 1;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+blockquote, q {
+  quotes: none;
+}
+blockquote:before, blockquote:after, q:before, q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+body {
+  -webkit-text-size-adjust: none;
+}
+
+mark {
+  background-color: transparent;
+  color: inherit;
+}
+
+input::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
+
+input, select, textarea {
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
 /*********************
 BREAKPOINTS
 *********************/
-@import url("https://fonts.googleapis.com/css?family=Lato");
 .fa,
 .fas,
 .far,
@@ -5654,77 +5725,6 @@ readers do not read off random characters that represent icons */
   font-family: "Font Awesome 5 Brands";
 }
 
-html, body, div, span, applet, object,
-iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
-pre, a, abbr, acronym, address, big, cite,
-code, del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var, b,
-u, i, center, dl, dt, dd, ol, ul, li, fieldset,
-form, label, legend, table, caption, tbody,
-tfoot, thead, tr, th, td, article, aside,
-canvas, details, embed, figure, figcaption,
-footer, header, hgroup, menu, nav, output, ruby,
-section, summary, time, mark, audio, video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-  display: block;
-}
-
-body {
-  line-height: 1;
-}
-
-ol, ul {
-  list-style: none;
-}
-
-blockquote, q {
-  quotes: none;
-}
-blockquote:before, blockquote:after, q:before, q:after {
-  content: "";
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-body {
-  -webkit-text-size-adjust: none;
-}
-
-mark {
-  background-color: transparent;
-  color: inherit;
-}
-
-input::-moz-focus-inner {
-  border: 0;
-  padding: 0;
-}
-
-input, select, textarea {
-  -moz-appearance: none;
-  -webkit-appearance: none;
-  -ms-appearance: none;
-  appearance: none;
-}
-
-ul {
-  margin: 0;
-  padding: 0;
-}
-
 /* Basic */
 html {
   box-sizing: border-box;
@@ -5752,9 +5752,29 @@ body.is-preload *, body.is-preload *:before, body.is-preload *:after {
 body, input, select, textarea {
   color: #666;
   font-family: "Lato", sans-serif;
-  font-size: 16pt;
+  font-size: 12pt;
   font-weight: 300;
   line-height: 1.65em;
+}
+
+h1 {
+  font-size: 1.75em;
+  line-height: 1.35em;
+}
+
+h2 {
+  font-size: 1.5em;
+  line-height: 1.35em;
+}
+
+h3 {
+  font-size: 1.1em;
+  line-height: 1.35em;
+}
+
+h4 {
+  font-size: 1em;
+  line-height: 1.35em;
 }
 
 a {
@@ -5791,36 +5811,6 @@ h1, h2, h3, h4, h5, h6 {
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
   color: inherit;
   text-decoration: none;
-}
-
-h1 {
-  font-size: 2.25em;
-  line-height: 1.35em;
-}
-
-h2 {
-  font-size: 2em;
-  line-height: 1.35em;
-}
-
-h3 {
-  font-size: 1.35em;
-  line-height: 1.5em;
-}
-
-h4 {
-  font-size: 1.25em;
-  line-height: 1.5em;
-}
-
-h5 {
-  font-size: 0.9em;
-  line-height: 1.5em;
-}
-
-h6 {
-  font-size: 0.7em;
-  line-height: 1.5em;
 }
 
 sub {
@@ -5965,7 +5955,7 @@ input[type=reset].wide,
 input[type=button].wide,
 button.wide,
 .button.wide {
-  min-width: 18em;
+  min-width: 20em;
 }
 input[type=submit].primary,
 input[type=reset].primary,
@@ -6014,6 +6004,8 @@ button:disabled,
   overflow: hidden;
   position: relative;
   text-align: center;
+  max-width: 100%;
+  object-fit: fill;
 }
 #header a {
   border-bottom-color: rgba(255, 255, 255, 0.5);
@@ -6307,7 +6299,9 @@ header {
 }
 
 .bcflogo {
+  max-width: 100%;
   margin-bottom: 1em;
+  width: 336px;
 }
 
 ul {
@@ -6702,9 +6696,9 @@ textarea:focus {
 
 select {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' preserveAspectRatio='none' viewBox='0 0 40 40'%3E%3Cpath d='M9.4,12.3l10.4,10.4l10.4-10.4c0.2-0.2,0.5-0.4,0.9-0.4c0.3,0,0.6,0.1,0.9,0.4l3.3,3.3c0.2,0.2,0.4,0.5,0.4,0.9 c0,0.4-0.1,0.6-0.4,0.9L20.7,31.9c-0.2,0.2-0.5,0.4-0.9,0.4c-0.3,0-0.6-0.1-0.9-0.4L4.3,17.3c-0.2-0.2-0.4-0.5-0.4-0.9 c0-0.4,0.1-0.6,0.4-0.9l3.3-3.3c0.2-0.2,0.5-0.4,0.9-0.4S9.1,12.1,9.4,12.3z' fill='rgba(144, 144, 144, 0.5)' /%3E%3C/svg%3E");
-  background-size: 1.25rem;
+  background-size: 1.25em;
   background-repeat: no-repeat;
-  background-position: calc(100% - 1rem) center;
+  background-position: calc(100% - em) center;
   height: 2.75em;
   padding-right: 2.75em;
   text-overflow: ellipsis;
@@ -7148,26 +7142,6 @@ html, body {
 
 /* Header Gradient */
 /* Basic */
-body, input, select, textarea {
-  font-size: 12pt;
-}
-
-h1 {
-  font-size: 1.75em;
-}
-
-h2 {
-  font-size: 1.5em;
-}
-
-h3 {
-  font-size: 1.1em;
-}
-
-h4 {
-  font-size: 1em;
-}
-
 ul.major-icons li {
   padding: 1.5em;
 }
@@ -7184,7 +7158,7 @@ ul.major-icons li .icon:before {
   margin: 0 0 1em 0;
 }
 
-.compassbar {
+#compassbar {
   padding: 20px;
   text-align: right;
   position: fixed;
@@ -7192,12 +7166,83 @@ ul.major-icons li .icon:before {
   width: 100%;
   max-width: 100%;
 }
-.compassbar .compassicon {
+#compassbar #compassicon {
   color: #faa322;
 }
-.compassbar a:-webkit-any-link {
-  text-decoration: none currentcolor solid !important;
-  text-decoration-line: none !important;
+
+@media (min-width: 900px) {
+  body, input, select, textarea {
+    font-size: 13pt;
+  }
+
+  h1 br, h2 br, h3 br, h4 br, h5 br, h6 br {
+    display: none;
+  }
+
+  h1 {
+    font-size: 2em;
+  }
+
+  h2 {
+    font-size: 1.75em;
+  }
+
+  h3 {
+    font-size: 1.2em;
+  }
+
+  h4 {
+    font-size: 1.1em;
+  }
+
+  h5 {
+    font-size: 1em;
+  }
+}
+@media (min-width: 1200px) {
+  body, input, select, textarea {
+    font-size: 14pt;
+  }
+
+  h1 br, h2 br, h3 br, h4 br, h5 br, h6 br {
+    display: none;
+  }
+
+  h1 {
+    font-size: 2.25em;
+    line-height: 1.35em;
+  }
+
+  h2 {
+    font-size: 2em;
+    line-height: 1.35em;
+  }
+
+  h3 {
+    font-size: 1.35em;
+    line-height: 1.5em;
+  }
+
+  h4 {
+    font-size: 1.25em;
+    line-height: 1.5em;
+  }
+
+  h5 {
+    font-size: 0.9em;
+    line-height: 1.5em;
+  }
+
+  h6 {
+    font-size: 0.7em;
+    line-height: 1.5em;
+  }
+}
+@media (min-width: 1800px) {
+  /* Basic */
+  body, input, select, textarea {
+    font-size: 15pt;
+  }
 }
 
 /*# sourceMappingURL=main.css.map */
