--- a/assets/sass/new.scss
+++ b/assets/sass/new.scss
@@ -1,3 +1,4 @@
+@import 'libs/reset';
 @import 'libs/vars';
 @import 'libs/functions';
 @import 'libs/mixins';
@@ -10,7 +11,6 @@
 @import '../fa/brands.scss';
 // @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300italic,400,400italic");
 @import url('https://fonts.googleapis.com/css?family=Lato');
-@import 'libs/reset';
 @import 'libs/basic';
 @import 'libs/button';
 @import 'libs/header';
@@ -47,7 +47,12 @@ header {
 }
 
 .bcflogo {
+  max-width: 100%;
   margin-bottom: 1em;
+  width: 336px;
+
+  // @include breakpoints(phone)
+
 }
 
 
@@ -375,9 +380,9 @@ textarea {
 
 select {
 	background-image: svg-url("<svg xmlns='http://www.w3.org/2000/svg' width='40' height='40' preserveAspectRatio='none' viewBox='0 0 40 40'><path d='M9.4,12.3l10.4,10.4l10.4-10.4c0.2-0.2,0.5-0.4,0.9-0.4c0.3,0,0.6,0.1,0.9,0.4l3.3,3.3c0.2,0.2,0.4,0.5,0.4,0.9 c0,0.4-0.1,0.6-0.4,0.9L20.7,31.9c-0.2,0.2-0.5,0.4-0.9,0.4c-0.3,0-0.6-0.1-0.9-0.4L4.3,17.3c-0.2-0.2-0.4-0.5-0.4-0.9 c0-0.4,0.1-0.6,0.4-0.9l3.3-3.3c0.2-0.2,0.5-0.4,0.9-0.4S9.1,12.1,9.4,12.3z' fill='#{_palette(border)}' /></svg>");
-	background-size: 1.25rem;
+	background-size: 1.25em;
 	background-repeat: no-repeat;
-	background-position: calc(100% - 1rem) center;
+	background-position: calc(100% - em) center;
 	height: _size(element-height);
 	padding-right: _size(element-height);
 	text-overflow: ellipsis;
@@ -795,21 +800,8 @@ html, body {
 //
 // /* XLarge */
 //
-// @include breakpoint('<=xlarge') {
-//
-// 	/* Basic */
-//
-// 		body, input, select, textarea {
-// 			font-size: 14pt;
-// 		}
-//
-// 	/* Header */
-//
-// 		#header {
-// 			@include padding(6em, 0, (0,0,_size(element-margin),0));
-// 		}
-//
-// }
+
+
 //
 // /* Large */
 //
@@ -821,11 +813,7 @@ html, body {
 // 			font-size: 13pt;
 // 		}
 //
-// 		h1, h2, h3, h4, h5, h6 {
-// 			br {
-// 				display: none;
-// 			}
-// 		}
+
 //
 // 	/* List */
 //
@@ -931,25 +919,7 @@ html, body {
 
 	/* Basic */
 
-		body, input, select, textarea {
-			font-size: 12pt;
-		}
 
-		h1 {
-			font-size: 1.75em;
-		}
-
-		h2 {
-			font-size: 1.5em;
-		}
-
-		h3 {
-			font-size: 1.1em;
-		}
-
-		h4 {
-			font-size: 1em;
-		}
 //
 // 	/* List */
 //
@@ -1056,19 +1026,96 @@ html, body {
 // 	/* Basic */
 //
 
-.compassbar {
+#compassbar {
   padding: 20px;
   text-align: right;
   position: fixed;
   top: 0;
   width: 100%;
   max-width: 100%;
-  .compassicon {
+  #compassicon {
     // display: flex;
     color: _palette(accent1);
   }
-  a:-webkit-any-link {
-    text-decoration: none currentcolor solid !important;
-    text-decoration-line: none !important;
+}
+
+@include breakpoint(tablet) {
+  body, input, select, textarea {
+    font-size: 13pt;
   }
+
+  		h1, h2, h3, h4, h5, h6 {
+  			br {
+  				display: none;
+  			}
+  		}
+      h1 {
+        font-size: 2em;
+      }
+      h2 {
+        font-size: 1.75em;
+      }
+      h3 {
+        font-size: 1.2em;
+      }
+      h4 {
+        font-size: 1.1em;
+      }
+      h5 {
+      font-size: 1em;
+    }
+}
+
+@include breakpoint(laptop) {
+  body, input, select, textarea {
+    font-size: 14pt;
+  }
+
+  		h1, h2, h3, h4, h5, h6 {
+  			br {
+  				display: none;
+  			}
+  		}
+
+
+      h1 {
+      	font-size: 2.25em;
+      	line-height: 1.35em;
+      }
+
+      h2 {
+      	font-size: 2em;
+      	line-height: 1.35em;
+      }
+
+      h3 {
+      	font-size: 1.35em;
+      	line-height: 1.5em;
+      }
+
+      h4 {
+      	font-size: 1.25em;
+      	line-height: 1.5em;
+      }
+
+      h5 {
+      	font-size: 0.9em;
+      	line-height: 1.5em;
+      }
+
+      h6 {
+      	font-size: 0.7em;
+      	line-height: 1.5em;
+      }
+}
+
+
+@include breakpoint(desktop) {
+
+	/* Basic */
+
+		body, input, select, textarea {
+			font-size: 15pt;
+		}
+
 }
