--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5957,6 +5957,15 @@ button.wide,
 .button.wide {
   min-width: 20em;
 }
+@media (max-width: 350px) {
+  input[type=submit].wide,
+input[type=reset].wide,
+input[type=button].wide,
+button.wide,
+.button.wide {
+    min-width: 17em;
+  }
+}
 input[type=submit].primary,
 input[type=reset].primary,
 input[type=button].primary,
@@ -5992,6 +6001,18 @@ button:disabled,
   cursor: default;
   opacity: 0.25;
 }
+@media (max-width: 350px) {
+  input[type=submit],
+input[type=reset],
+input[type=button],
+button,
+.button {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+  }
+}
 
 #header {
   padding: 1em 0 1em 0;
@@ -6002,10 +6023,10 @@ button:disabled,
   background-position: top left, center center, center center;
   background-size: auto, cover, cover;
   overflow: hidden;
+  overflow-x: hidden;
   position: relative;
   text-align: center;
   max-width: 100%;
-  object-fit: fill;
 }
 #header a {
   border-bottom-color: rgba(255, 255, 255, 0.5);
@@ -6130,6 +6151,7 @@ button:disabled,
   -ms-transition: opacity 1s ease;
   transition: opacity 1s ease;
   background-image: linear-gradient(45deg, #32b8af, #316c68);
+  overflow: hidden;
   content: "";
   height: 100%;
   left: 0;
@@ -6303,6 +6325,11 @@ header {
   margin-bottom: 1em;
   width: 336px;
 }
+@media (max-width: 350px) {
+  .bcflogo {
+    width: 224px;
+  }
+}
 
 ul {
   list-style: disc;
@@ -6395,24 +6422,6 @@ ul.actions.fit.stacked {
 .container {
   margin: 0 auto;
   max-width: 90em;
-  width: 100%;
-}
-.container.xsmall {
-  width: 15em;
-}
-.container.small {
-  width: 30em;
-}
-.container.medium {
-  width: 45em;
-}
-.container.large {
-  width: 75em;
-}
-.container.xlarge {
-  width: 90em;
-}
-.container.max {
   width: 100%;
 }
 
@@ -7241,6 +7250,13 @@ ul.major-icons li .icon:before {
   /* Basic */
   body, input, select, textarea {
     font-size: 15pt;
+  }
+}
+@media (max-width: 350px) {
+  body, input, select, textarea {
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+    font-size: 9pt;
   }
 }
 
