--- a/assets/sass/libs/_header.scss
+++ b/assets/sass/libs/_header.scss
@@ -7,10 +7,11 @@
 	background-position:	top left,						center center,					center center;
 	background-size:		auto,							cover,							cover;
 	overflow: hidden;
+  overflow-x: hidden;
 	position: relative;
 	text-align: center;
   max-width: 100%;
-  object-fit: fill;
+  // object-fit: fill;
 
 	h1 {
 		margin: 0;
@@ -63,6 +64,7 @@
 	&:after {
 		@include vendor('transition', 'opacity 1s ease');
 		background-image: linear-gradient(45deg, _palette(accent6), _palette(accent6-alt));
+    overflow: hidden;
 		content: '';
 		height: 100%;
 		left: 0;
