--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5921,6 +5921,7 @@ input[type=button]:active,
 button:active,
 .button:active {
   background-color: rgba(144, 144, 144, 0.2);
+  border: 1px inset rgba(144, 144, 144, 0.5);
 }
 input[type=submit].icon:before,
 input[type=reset].icon:before,
@@ -5966,6 +5967,29 @@ button.wide,
     min-width: 17em;
   }
 }
+input[type=submit].nav-button,
+input[type=reset].nav-button,
+input[type=button].nav-button,
+button.nav-button,
+.button.nav-button {
+  box-shadow: inset 0 0 0 1px #faa322;
+}
+input[type=submit].nav-button:hover,
+input[type=reset].nav-button:hover,
+input[type=button].nav-button:hover,
+button.nav-button:hover,
+.button.nav-button:hover {
+  background-color: rgba(255, 255, 255, 0.125);
+  box-shadow: inset 0 0 5px 1px #faa322;
+}
+input[type=submit].nav-button:active,
+input[type=reset].nav-button:active,
+input[type=button].nav-button:active,
+button.nav-button:active,
+.button.nav-button:active {
+  background-color: rgba(255, 255, 255, 0.25);
+  border: 1px inset #f2b65d;
+}
 input[type=submit].primary,
 input[type=reset].primary,
 input[type=button].primary,
@@ -5988,6 +6012,7 @@ input[type=button].primary:active,
 button.primary:active,
 .button.primary:active {
   background-color: #484848;
+  border: 2px inset #f2b65d;
 }
 input[type=submit].disabled, input[type=submit]:disabled,
 input[type=reset].disabled,
@@ -6000,18 +6025,6 @@ button:disabled,
 .button:disabled {
   cursor: default;
   opacity: 0.25;
-}
-@media (max-width: 350px) {
-  input[type=submit],
-input[type=reset],
-input[type=button],
-button,
-.button {
-    padding-left: 0 !important;
-    padding-right: 0 !important;
-    margin-left: 0 !important;
-    margin-right: 0 !important;
-  }
 }
 
 #header {
@@ -6114,10 +6127,10 @@ button,
   padding-left: 0;
 }
 #header .inner {
-  -moz-transition: -moz-transform 1.5s ease, opacity 2s ease;
-  -webkit-transition: -webkit-transform 1.5s ease, opacity 2s ease;
-  -ms-transition: -ms-transform 1.5s ease, opacity 2s ease;
-  transition: transform 1.5s ease, opacity 2s ease;
+  -moz-transition: -moz-transform 0.75s ease, opacity 1s ease;
+  -webkit-transition: -webkit-transform 0.75s ease, opacity 1s ease;
+  -ms-transition: -ms-transform 0.75s ease, opacity 1s ease;
+  transition: transform 0.75s ease, opacity 1s ease;
   -moz-transition-delay: 0.25s;
   -webkit-transition-delay: 0.25s;
   -ms-transition-delay: 0.25s;
@@ -6131,14 +6144,14 @@ button,
   z-index: 1;
 }
 #header .inner .actions {
-  -moz-transition: -moz-transform 1.25s ease;
-  -webkit-transition: -webkit-transform 1.25s ease;
-  -ms-transition: -ms-transform 1.25s ease;
-  transition: transform 1.25s ease;
-  -moz-transition-delay: 1s;
-  -webkit-transition-delay: 1s;
-  -ms-transition-delay: 1s;
-  transition-delay: 1s;
+  -moz-transition: -moz-transform 0.6s ease;
+  -webkit-transition: -webkit-transform 0.6s ease;
+  -ms-transition: -ms-transform 0.6s ease;
+  transition: transform 0.6s ease;
+  -moz-transition-delay: 0.5s;
+  -webkit-transition-delay: 0.5s;
+  -ms-transition-delay: 0.5s;
+  transition-delay: 0.5s;
   -moz-transform: translateY(0);
   -webkit-transform: translateY(0);
   -ms-transform: translateY(0);
@@ -6146,10 +6159,10 @@ button,
   opacity: 1;
 }
 #header:after {
-  -moz-transition: opacity 1s ease;
-  -webkit-transition: opacity 1s ease;
-  -ms-transition: opacity 1s ease;
-  transition: opacity 1s ease;
+  -moz-transition: opacity 0.5s ease;
+  -webkit-transition: opacity 0.5s ease;
+  -ms-transition: opacity 0.5s ease;
+  transition: opacity 0.5s ease;
   background-image: linear-gradient(45deg, #32b8af, #316c68);
   overflow: hidden;
   content: "";
@@ -7174,6 +7187,11 @@ ul.major-icons li .icon:before {
 #compass-bar #compass-icon {
   color: #faa322;
 }
+#compass-bar #compass-icon:hover {
+  -webkit-animation: spin 1.5s linear infinite;
+  animation: spin 1.5s linear infinite;
+}
+
 @-webkit-keyframes spin {
   0% {
     -webkit-transform: rotate(0deg);
@@ -7281,7 +7299,7 @@ ul.major-icons li .icon:before {
 @media (min-width: 1800px) {
   /* Basic */
   body, input, select, textarea {
-    font-size: 15pt;
+    font-size: 16pt;
   }
 }
 
