--- a/assets/sass/libs/_button.scss
+++ b/assets/sass/libs/_button.scss
@@ -30,6 +30,7 @@ button,
 
 	&:active {
 		background-color: _palette(border2-bg);
+    border: 1px inset _palette(border);
 	}
 
 	&.icon {
@@ -57,6 +58,19 @@ button,
     }
 	}
 
+  &.nav-button {
+    box-shadow: inset 0 0 0 1px _palette(accent1);
+    &:hover {
+      background-color: _palette(dark,border-bg);
+      box-shadow: inset 0 0 5px 1px _palette(accent1);
+    }
+
+    &:active {
+      background-color:_palette(dark, border2-bg);
+      border: 1px inset _palette(accent1-pale);
+    }
+  }
+
 	&.primary {
 		background-color: _palette(accent1);
 		box-shadow: none !important;
@@ -68,6 +82,7 @@ button,
 
 		&:active {
 			background-color: darken(_palette(fg-bold), 5);
+      border: 2px inset _palette(accent1-pale);
 		}
 	}
 
@@ -77,10 +92,10 @@ button,
 		opacity: 0.25;
 	}
 
-  @include breakpoint(nokia) {
-    padding-left: 0 !important;
-    padding-right: 0 !important;
-    margin-left: 0 !important;
-    margin-right: 0 !important;
-  }
+  // @include breakpoint(nokia) {
+  //   padding-left: 0 !important;
+  //   padding-right: 0 !important;
+  //   margin-left: 0 !important;
+  //   margin-right: 0 !important;
+  // }
 }
