--- a/assets/sass/new.scss
+++ b/assets/sass/new.scss
@@ -1048,7 +1048,8 @@ table {
     // display: flex;
     color: _palette(accent1);
     &:hover {
-      // css animation spin here
+      -webkit-animation: spin 1.5s linear infinite;
+      animation: spin 1.5s linear infinite;
     }
   }
 }
@@ -1065,6 +1066,7 @@ table {
         transform: rotate(360deg);  /* Firefox 16+, IE 10+, Opera */
     }
 }
+
 @keyframes spin {
     0%   {
         -webkit-transform: rotate(0deg);  /* Chrome, Opera 15+, Safari 3.1+ */
@@ -1154,7 +1156,7 @@ table {
 	/* Basic */
 
 		body, input, select, textarea {
-			font-size: 15pt;
+			font-size: 16pt;
 		}
 
 }
