--- a/assets/sass/new.scss
+++ b/assets/sass/new.scss
@@ -222,7 +222,7 @@ ul.actions {
 
 
 .container {
-	margin: 0 auto;
+	margin: 0 auto 2em;
 	// max-width: calc(100% - #{_size(element-margin) * 2});
 	// width: _size(container-width);
   max-width: 90em;
@@ -260,6 +260,13 @@ ul.actions {
 	// @include breakpoint('<=xsmall') {
 	// 	max-width: calc(100% - #{_size(element-margin) * 1.5});
 	// }
+
+}
+
+.wordbox {
+  p {
+    margin-bottom: 1em;
+  }
 }
 
 /* Row */
@@ -1038,12 +1045,20 @@ table {
 //
 
 #compass-bar {
-  padding: 20px;
+  // padding: 1em;
   text-align: right;
   position: fixed;
-  top: 0;
-  width: 100%;
-  max-width: 100%;
+  top: 1em;
+  right: 1em;
+  width: 10em;
+  #navpanel {
+    @include vendor('display', 'flex');
+    @include vendor('flex-direction', 'column');
+    // max-width: 10em;
+    // padding: 1em;
+    position: absolute;
+    // right: em;
+  }
   #compass-icon {
     // display: flex;
     color: _palette(accent1);
@@ -1052,6 +1067,10 @@ table {
       animation: spin 1.5s linear infinite;
     }
   }
+}
+
+.invisible {
+  visibility: hidden;
 }
 
 @-webkit-keyframes spin {
@@ -1172,3 +1191,7 @@ table {
 //   // max-width: 100vw;
 //   // }
 // }
+
+.facepic {
+  width: 20em;
+}
