--- a/assets/sass/new.scss
+++ b/assets/sass/new.scss
@@ -1059,7 +1059,7 @@ table {
     position: absolute;
     // right: em;
     // z-index: 2;
-    height: 50em;
+    height: 100%;
     width: 100%;
   }
   .nav-button {
