Color tweak. Images cropped to match ratio.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6879,7 +6879,7 @@ input[type=radio] + label:before {
   color: #faa322;
 }
 .icon.style2:before {
-  color: #8addaa;
+  color: #BE3269;
 }
 .icon.style3:before {
   color: #9064bf;
