--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -65,7 +65,7 @@
 		border2:			rgba(144,144,144,0.75),
 		border2-bg:			rgba(144,144,144,0.2),
 		accent1:			#faa322, // golden
-		accent2:			#8addaa, // magenta
+		accent2:			#BE3269, // magenta
 		accent3:			#9064bf, // indigo
 		accent4:			#ef6b2d, // reddish
 		accent5:			#0879a1, // dark cyan
